Simplified buildPathStartingFromKing